style: prevent content overflow

--- a/Css/style.css
+++ b/Css/style.css
@@ -51,7 +51,9 @@ body{
   background: var(--bg-color);
 }
 /* === .content === */
-
+.content{
+  overflow: hidden;
+}
 /* === a === */
 
 /* === img === */
